test/CheckError/Struct/OpaqueStructAlignOf.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct OpaqueStruct;

size_t f() {
	// CHECK: .loci:8:9: error: cannot find static method '__alignmask' for type 'OpaqueStruct'
	return alignof(OpaqueStruct);
}

// CHECK: 3 errors generated.
